# DicomConvert

./: CMakeLists.txt  README.md
src/: main.cxx
